--- a/.github/workflows/worcs_endpoints.yaml
+++ b/.github/workflows/worcs_endpoints.yaml
@@ -17,6 +17,9 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - name: Install libcurl
+        run: sudo apt-get install libcurl4-openssl-dev
+        
       - uses: r-lib/actions/setup-pandoc@v2
 
       - uses: r-lib/actions/setup-r@v2
