--- a/.github/workflows/worcs_endpoints.yaml
+++ b/.github/workflows/worcs_endpoints.yaml
@@ -30,5 +30,7 @@ jobs:
 
       - name: Check endpoints
         run: |
-          worcs::check_endpoints()
+          worcs:::cs_fun("manuscript/tab.csv")
+          worcs::reproduce(check_endpoints = FALSE)
+          worcs:::cs_fun("manuscript/tab.csv")
         shell: Rscript {0}
